--- a/exercicio-html/formulario.html
+++ b/exercicio-html/formulario.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <form>
-        <label>Nome:</label>
-        <input type="text" name="Nome">        
+        <label for="name">Nome completo</label>
+        <input type="text" name="Nome completo" id="Nome completo">        
         <br /><br />
         <label for="email">Seu email:</label>
         <input id="email" type="email" />
